# reshade-safetyhook-gui

./: .clang-format  CMakeLists.txt  reshade-safetyhook-gui.slnx  reshade-safetyhook-gui.vcxproj  reshade-safetyhook-gui.vcxproj.filters  vcpkg.json
src/: context_wrapper.h  dllmain.cpp  gui.h  hook_manager.h  inlinehook_definition.h  memory_utils.cpp  memory_utils.h  memory_utils.hpp  midhook_definition.h  midhook_extensions.h  midhook_wrapper.cpp  midhook_wrapper.h  midhook_wrapper.hpp  pointer_analysis.cpp  pointer_analysis.h  pointer_analysis.hpp  private_member_stealer.h
src/gui/: allocator.h  allocator.hpp  gui.h  gui.hpp  utils.h  utils.hpp
src/gui/midhook/: entry.h  live.h  live.hpp  log.h  midhook.h  midhook.hpp
src/gui/midhook/entry/: entry.h  live.h  log.h
src/safetyhook/: ContextEx.cpp  ContextEx.h
